# Gifer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  logger.py  main.py  security.py
app/compressor/: __init__.py  compression_service.py  external_tools.py  gif_optimizer.py
app/models/: requests.py  responses.py
app/routers/: convert.py  screenshots.py
app/services/: compression_service.py  drive_service.py  gif_service.py  ordering.py  screenshot_service.py  video_service.py
app/utils/: dates.py  files.py  gpsjam_handler.py  image_ops.py  render_wait.py  url.py
docs/: enhancement-summary.md  gpsjam-implementation-summary.md  page-load-wait-analysis.md
scripts/: compress_gif.py  generate_august_gifs.ps1  generate_month_gifs.ps1  make_gif.py  make_video.py  run_august_generation.py  scrape_screenshots.py  test_enhanced_compression.py
tests/: test_date_utils.py  test_gpsjam_handler.py  test_ordering.py  test_render_wait.py  test_url_utils.py
